--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,50 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical"
+	tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/addStudent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="add"/>
+	<Button
+		android:id="@+id/addStudent"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:text="add" />
 
-    <Button
-        android:id="@+id/View"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="View"/>
 
-    <Button
-        android:id="@+id/update"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Update"/>
+	<Button
+		android:id="@+id/viewStudentInfo"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:text="Details" />
 
-    <EditText
-        android:id="@+id/idStudentUpdate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="id"/>
 
-    <EditText
-        android:id="@+id/nameUpdate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="name"/>
+	<Button
+		android:id="@+id/btnAddStandard"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:text="Add Standard" />
 
-    <EditText
-        android:id="@+id/calssNameStanadardUpdate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="class"/>
 
+	<TextView
+		android:id="@+id/listOfStudent"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="list of student" />
 
 </LinearLayout>
