--- a/app/src/main/res/layout/activity_add_standards.xml
+++ b/app/src/main/res/layout/activity_add_standards.xml
@@ -1,10 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".standard.AddStandards">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	tools:context=".standard.AddStandards"
+	android:orientation="vertical">
+	<LinearLayout
+		android:id="@+id/lladdStand"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+		<EditText
+			android:id="@+id/etStandardId"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content" />
+
+		<EditText
+			android:id="@+id/etStandardName"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content" />
+
+	</LinearLayout>
+
+	<Button
+		android:id="@+id/btnAddStand"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:text="add"/>
+
+	<Button
+		android:id="@+id/btnStandDetails"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:text="Standard Details" />
+
+
+	<TextView
+		android:id="@+id/listOfStandard"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="list of Stanadrd" />
+
+
+</LinearLayout>
